tests/compile/leak_migration.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/compile/leak_migration.rs:21:13
   |
18 |     let mut sneaky = None;
   |         ---------- `sneaky` declared here, outside of the closure body
19 |     m.migrate(|_, _| v1::update::Schema {
20 |         my_table: v1::MyTable::migrate(|prev| {
   |                                         ---- `prev` is a reference that is only valid in the closure body
21 |             sneaky = Some(prev);
   |             ^^^^^^ `prev` escapes the closure body here
